# coder

./: .gitignore  CLAUDE.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
docs/: 功能设计文档.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agy.rs  history.rs  lib.rs  main.rs  tray.rs
src-tauri/src/db/: mod.rs
src-tauri/src/pty/: mod.rs
src/components/: AntigravityUsage.tsx  CloseDialog.tsx  ErrorBoundary.tsx  NewTabDialog.tsx  SessionPopover.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  TerminalPane.tsx
src/lib/: antigravity.ts  db.ts  history.ts  launchQueue.ts  providers.ts  pty.ts  window.ts
src/stores/: tabs.ts
